--- a/src/pages/design-system.astro
+++ b/src/pages/design-system.astro
@@ -5,7 +5,7 @@ import DesignLayout from '@layouts/DesignLayout.astro'
 ---
 
 <DesignLayout title="Design system" description="This is an overview of the design system">
-    <Main>
+    <main class="flow lane">
         <div class="flow" id="colors">
             <h2 class="numbered-title"><span>01</span> colors</h2>
 
@@ -244,7 +244,7 @@ import DesignLayout from '@layouts/DesignLayout.astro'
                 </div>
             </div>
         </div>
-    </Main>
+    </main>
 </DesignLayout>
 
 <style>
