--- a/src/scss/utilities/_typography.scss
+++ b/src/scss/utilities/_typography.scss
@@ -121,6 +121,8 @@
 
       &:is(:hover, :focus-visible) {
         --_indicator-opacity: 50%;
+
+        // transition: border-color 0.25s ease-in-out;
       }
 
       &:is(.is-active, [aria-expanded='true']) {
