--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -2,11 +2,11 @@
 
 @layer base.layout {
   .lane {
-    --contain-size: 69.375rem; // 1110px
-    --site-space: minmax(1.5rem, 1fr);
-
     display: grid;
-    grid-template-columns: var(--site-space) minmax(0, var(--contain-size)) var(--site-space);
+    grid-template-columns:
+      minmax(var(--site-spacing), 1fr)
+      minmax(0, var(--site-constrain))
+      minmax(var(--site-spacing), 1fr);
     place-content: center;
 
     > * {
@@ -24,12 +24,14 @@
 
   .grid-layout {
     display: grid;
+    grid-template-columns: minmax(0, 1fr) min(100% - var(--site-spacing) * 2) minmax(0, 1fr);
     place-items: center;
     text-align: center;
-    gap: 1.5rem;
+    gap: var(--site-spacing);
 
     > * {
       max-inline-size: 62ch;
+      grid-column: 2;
     }
 
     .home & {
@@ -50,8 +52,19 @@
     }
 
     @media (--for-tablet-l-up) {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns:
+        minmax(0, 1fr)
+        repeat(2, minmax(0, calc(var(--site-constrain) / 2 - var(--site-spacing) / 2)))
+        minmax(0, 1fr);
       text-align: start;
+
+      > :first-child {
+        grid-column: 2;
+      }
+
+      > :last-child {
+        grid-column: 3;
+      }
     }
   }
 }
