--- a/src/pages/crew.astro
+++ b/src/pages/crew.astro
@@ -4,7 +4,7 @@ import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title="Space Tourism | Crew" className="crew">
-    <Main class="lane">
-        <h1>Crew</h1>
+    <Main>
+        <h1 class="numbered-title"><span aria-hidden="true">02</span> Meet your crew</h1>
     </Main>
 </Layout>
