--- a/src/pages/destination.astro
+++ b/src/pages/destination.astro
@@ -4,7 +4,7 @@ import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title="Space Tourism | Destination" className="destination">
-    <Main class="lane">
-        <h1>Destination</h1>
+    <Main>
+        <h1 class="numbered-title"><span aria-hidden="true">01</span> Pick your destination</h1>
     </Main>
 </Layout>
