--- a/src/pages/technology.astro
+++ b/src/pages/technology.astro
@@ -4,7 +4,7 @@ import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title="Space Tourism | Technology" className="technology">
-    <Main class="lane">
-        <h1>Technology</h1>
+    <Main>
+        <h1 class="numbered-title"><span aria-hidden="true">03</span> SPACE LAUNCH 101</h1>
     </Main>
 </Layout>
