--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -25,8 +25,6 @@
   .grid-layout {
     display: grid;
     grid-template-columns: minmax(0, 1fr) min(100% - var(--site-spacing) * 2) minmax(0, 1fr);
-    place-items: center;
-    text-align: center;
     gap: var(--site-spacing);
 
     > * {
@@ -34,18 +32,42 @@
       grid-column: 2;
     }
 
-    .home & {
+    body:not(.home) & {
+      padding-block: #{fluid(24px, 72px, 600px, 1200px)};
+
+      @media (--for-phone-only) {
+        justify-items: center;
+        text-align: center;
+      }
+
+      > :first-child {
+        grid-column: 2 / -2;
+
+        @media (--for-phone-only) {
+          grid-column: 2;
+        }
+      }
+    }
+
+    body:is(.home) & {
       padding-block: #{fluid(32px, 56px, 600px, 900px)};
+
+      @media (--until-tablet-l) {
+        place-items: center;
+        text-align: center;
+      }
 
       @media (--for-tablet-l-up) {
         align-items: end;
         padding-block-end: max(6rem, 18vh);
 
         > :first-child {
+          grid-column: 2;
           justify-self: flex-start;
         }
 
         > :last-child {
+          grid-column: 3;
           justify-self: flex-end;
         }
       }
@@ -56,15 +78,6 @@
         minmax(0, 1fr)
         repeat(2, minmax(0, calc(var(--site-constrain) / 2 - var(--site-spacing) / 2)))
         minmax(0, 1fr);
-      text-align: start;
-
-      > :first-child {
-        grid-column: 2;
-      }
-
-      > :last-child {
-        grid-column: 3;
-      }
     }
   }
 }
