--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -193,7 +193,6 @@ const activeClass = 'uppercase text-white letter-spacing-2 is-active'
             gap: #{fluid(40px, 56px, 900px, 1400px)};
 
             padding-inline-start: calc(var(--site-spacing) + var(--_overlap-cols));
-            // padding-inline-start: 0;
         }
     }
 
@@ -236,96 +235,5 @@ const activeClass = 'uppercase text-white letter-spacing-2 is-active'
 </style>
 
 <script>
-    document.addEventListener('astro:page-load', () => {
-        const header = document.querySelector('header') as HTMLElement
-        const menu = header.querySelector('[data-menu]') as HTMLDivElement
-
-        if (!menu) return
-
-        const toggle = menu.querySelector('[data-menu-toggle]') as HTMLButtonElement
-        const navList = menu.querySelector('[data-menu-list]') as HTMLElement
-
-        if (!toggle || !navList) return
-
-        let isAnimating = false // Flag to track animation state
-
-        const openMenu = () => {
-            if (isAnimating) return // Don't open if already animating
-            isAnimating = true
-
-            toggle.setAttribute('aria-expanded', 'true')
-
-            // Make every other element inert
-            toggleInertOnOtherElements(header, true)
-
-            navList.hidden = false
-
-            // Listen for animation end and reset the flag
-            navList.addEventListener(
-                'animationend',
-                () => {
-                    isAnimating = false
-                },
-                { once: true }
-            )
-
-            // Focus on the first focusable element inside the menu
-            // const firstFocusableElement = navList.querySelector(
-            //     'a, button, input, select, textarea'
-            // ) as HTMLElement
-            // if (firstFocusableElement) {
-            //     firstFocusableElement.focus()
-            // }
-        }
-
-        const closeMenu = () => {
-            if (isAnimating) return // Don't close if already animating
-            isAnimating = true
-
-            toggle.setAttribute('aria-expanded', 'false')
-
-            // Remove inert attribute from other elements
-            toggleInertOnOtherElements(header, false)
-
-            navList.setAttribute('closing', '')
-            navList.addEventListener(
-                'animationend',
-                () => {
-                    navList.removeAttribute('closing')
-                    navList.hidden = true
-                    isAnimating = false
-                },
-                { once: true }
-            )
-        }
-
-        toggle.addEventListener('click', () => {
-            const open = JSON.parse(toggle.getAttribute('aria-expanded') as string)
-            open ? closeMenu() : openMenu()
-        })
-
-        document.addEventListener('keydown', (event) => {
-            if (event.key === 'Escape' && toggle.getAttribute('aria-expanded') === 'true') {
-                closeMenu()
-                toggle.focus()
-            }
-        })
-    })
-
-    // Function to set or remove the inert attribute on every other element except for the specified element and its descendants
-    function toggleInertOnOtherElements(element: HTMLElement, setInert: boolean) {
-        const otherElements = Array.from(document.body.children).filter(
-            (item) => item !== element && !element.contains(item)
-        ) as HTMLElement[]
-
-        console.log(otherElements)
-
-        otherElements.forEach((item) => {
-            if (setInert) {
-                item.setAttribute('inert', '')
-            } else {
-                item.removeAttribute('inert')
-            }
-        })
-    }
+    import '../scripts/navigation.ts'
 </script>
