--- a/src/scss/base/_page.scss
+++ b/src/scss/base/_page.scss
@@ -16,6 +16,10 @@
 
     /* stylelint-disable-next-line number-max-precision */
     line-height: 1.77778;
+
+    &:not(.home) {
+      align-items: flex-start;
+    }
   }
 
   // custom outline
@@ -27,56 +31,56 @@
 
 @layer base.home {
   .home {
-    --_bg: url('/home/background-home-mobile.jpg');
+    --_bg: url('../assets/home/background-home-mobile.jpg');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('/home/background-home-tablet.jpg');
+      --_bg: url('../assets/home/background-home-tablet.jpg');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('/home/background-home-desktop.jpg');
+      --_bg: url('../assets/home/background-home-desktop.jpg');
     }
   }
 }
 
 @layer base.destination {
   .destination {
-    --_bg: url('/destination/background-destination-mobile.jpg');
+    --_bg: url('../assets/destination/background-destination-mobile.jpg');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('/destination/background-destination-tablet.jpg');
+      --_bg: url('../assets/destination/background-destination-tablet.jpg');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('/destination/background-destination-desktop.jpg');
+      --_bg: url('../assets/destination/background-destination-desktop.jpg');
     }
   }
 }
 
 @layer base.crew {
   .crew {
-    --_bg: url('/crew/background-crew-mobile.jpg');
+    --_bg: url('../assets/crew/background-crew-mobile.jpg');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('/crew/background-crew-tablet.jpg');
+      --_bg: url('../assets/crew/background-crew-tablet.jpg');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('/crew/background-crew-desktop.jpg');
+      --_bg: url('../assets/crew/background-crew-desktop.jpg');
     }
   }
 }
 
 @layer base.technology {
   .technology {
-    --_bg: url('/technology/background-technology-mobile.jpg');
+    --_bg: url('../assets/technology/background-technology-mobile.jpg');
 
     @media (--for-tablet-p-up) {
-      --_bg: url('/technology/background-technology-tablet.jpg');
+      --_bg: url('../assets/technology/background-technology-tablet.jpg');
     }
 
     @media (--for-tablet-l-up) {
-      --_bg: url('/technology/background-technology-desktop.jpg');
+      --_bg: url('../assets/technology/background-technology-desktop.jpg');
     }
   }
 }
